all apis working
